force-app/main/default/objects/Application__c/fields/Application_Round__c.field-meta.xml
<CustomField>
    <fullName>Application_Round__c</fullName>
    <label>Application Round</label>
    <referenceTo>Application_Round__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>