force-app/main/default/objects/Application__c/fields/Date_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Date_Acknowledged__c</fullName>
    <label>Date Acknowledged</label>
    <type>Date</type>
</CustomField>