force-app/main/default/objects/Application__c/fields/Date_Shortlisted__c.field-meta.xml
<CustomField>
    <fullName>Date_Shortlisted__c</fullName>
    <label>Date Shortlisted</label>
    <type>Date</type>
</CustomField>