force-app/main/default/objects/Application__c/fields/EOI_Application__c.field-meta.xml
<CustomField>
    <fullName>EOI_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Application</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Application must be an Active Communities - Expression of Interest application</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Active Communities - EOI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>