force-app/main/default/objects/Application__c/fields/EOI_Clone__c.field-meta.xml
<CustomField>
    <fullName>EOI_Clone__c</fullName>
    <formula>if(not(EOI_Clone_Already_Cloned__c) &amp;&amp; EOI_Clone_Decision__c &amp;&amp; EOI_Clone_Full_Application_Round__c,true,false)</formula>
    <label>EOI Clone</label>
    <type>Checkbox</type>
</CustomField>