force-app/main/default/objects/Application__c/fields/EOI_Clone_Already_Cloned__c.field-meta.xml
<CustomField>
    <fullName>EOI_Clone_Already_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOI Clone - Already Cloned</label>
    <type>Checkbox</type>
</CustomField>