force-app/main/default/objects/Application__c/fields/EOI_Clone_Decision__c.field-meta.xml
<CustomField>
    <fullName>EOI_Clone_Decision__c</fullName>
    <formula>ispickval( Decision__c ,&quot;Proceed to Full Application&quot;)</formula>
    <label>EOI Clone - Decision</label>
    <type>Checkbox</type>
</CustomField>