force-app/main/default/objects/Application__c/fields/EOI_Clone_Full_Application_Round__c.field-meta.xml
<CustomField>
    <fullName>EOI_Clone_Full_Application_Round__c</fullName>
    <formula>if(isblank( Application_Round__r.Full_Application_Round__c ) ||  ispickval(Application_Round__r.Full_Application_Round__r.Status__c,&quot;Closed&quot;) ,false,true)</formula>
    <label>EOI Clone - Full Application Round</label>
    <type>Checkbox</type>
</CustomField>