force-app/main/default/objects/Application__c/fields/Final_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Comments__c</fullName>
    <label>Final Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>