force-app/main/default/objects/Application__c/fields/Government_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Government_Approvals__c</fullName>
    <label>Government Approvals</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>