force-app/main/default/objects/Application__c/fields/Investment_Sought__c.field-meta.xml
<CustomField>
    <fullName>Investment_Sought__c</fullName>
    <label>Investment Sought</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>