force-app/main/default/objects/Application__c/fields/Moderated_Scores__c.field-meta.xml
<CustomField>
    <fullName>Moderated_Scores__c</fullName>
    <description>To store moderated scores that are separated by blank space.</description>
    <label>Moderated Scores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>