force-app/main/default/objects/Application__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Project Name, Research Project Name or Team Name</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>