force-app/main/default/objects/Application__c/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <label>Reason for Decline</label>
    <type>TextArea</type>
</CustomField>