force-app/main/default/objects/Application__c/fields/Risk_Management_and_Environmental_Impact__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_and_Environmental_Impact__c</fullName>
    <label>Risk Management and Environmental Impact</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>