force-app/main/default/objects/Application__c/fields/Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_URL__c</fullName>
    <inlineHelpText>Paste a link to the completed Application form received with this application.  The form must first be saved in KC or KS.</inlineHelpText>
    <label>Link to Application</label>
    <type>Url</type>
</CustomField>