force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>if(not(isblank(text(Decision__c))),  text(Decision__c),

if(not(isblank(Date_Shortlisted__c)), &quot;Shortlisted&quot;,

if(not(isblank(Date_Acknowledged__c)), &quot;Acknowledged&quot;,

if(not(isblank(Date_Received__c)) , &quot;Received&quot;, &quot;Error&quot;

))))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>