force-app/main/default/objects/Application__c/recordTypes/Active_Communities_EOI.recordType-meta.xml
<RecordType>
    <fullName>Active_Communities_EOI</fullName>
    <active>true</active>
    <label>Active Communities - EOI</label>
</RecordType>