force-app/main/default/objects/Application__c/recordTypes/Active_Communities_Full.recordType-meta.xml
<RecordType>
    <fullName>Active_Communities_Full</fullName>
    <active>false</active>
    <label>Active Communities - Full</label>
</RecordType>