force-app/main/default/objects/Application__c/recordTypes/He_Oranga_Poutama.recordType-meta.xml
<RecordType>
    <fullName>He_Oranga_Poutama</fullName>
    <active>false</active>
    <label>He Oranga Poutama</label>
</RecordType>