force-app/main/default/objects/Application__c/recordTypes/Hillary_Expedition.recordType-meta.xml
<RecordType>
    <fullName>Hillary_Expedition</fullName>
    <active>false</active>
    <label>Hillary Expedition</label>
</RecordType>