force-app/main/default/objects/Application__c/recordTypes/Innovation.recordType-meta.xml
<RecordType>
    <fullName>Innovation</fullName>
    <active>false</active>
    <label>Innovation</label>
</RecordType>