force-app/main/default/objects/Application__c/recordTypes/Procurement_Full.recordType-meta.xml
<RecordType>
    <fullName>Procurement_Full</fullName>
    <active>true</active>
    <label>Procurement - Full</label>
</RecordType>