force-app/main/default/objects/Application__c/recordTypes/Research.recordType-meta.xml
<RecordType>
    <fullName>Research</fullName>
    <active>false</active>
    <label>Research</label>
</RecordType>